# explainalyzed

./: .gitignore  explainalyzed.md  main.py  pyproject.toml  re_tryout.py  run_create_data.py  run_sample_project.py  tryout.py  tryout2.py
data/: create_data.py  create_sample.py  plan.txt  utils.py
data/lineage/: aggregation_1.mmd  aggregation_2.mmd  aggregation_3.mmd  aggregation_4.mmd  aggregation_6.mmd  derive.mmd  explode.mmd  filter.mmd  filter_not_in_output.mmd  join_2.mmd  join_2_broadcast.mmd  join_cross.mmd  join_inner.mmd  join_left.mmd  join_right.mmd  join_rigth.mmd  select_1.mmd  select_2.mmd  transform.mmd  union.mmd  union_aggregate.mmd  union_forest.mmd  window_column.mmd  window_column_2.mmd  window_column_3.mmd  window_column_4.mmd
data/mermaid/: aggregation_1.mmd  aggregation_2.mmd  aggregation_3.mmd  derive.mmd  filter.mmd  filter_not_in_output.mmd  join_2.mmd  join_inner.mmd  join_left.mmd  join_rigth.mmd  select_1.mmd  select_2.mmd  simple_join_inner.mmd  union.mmd
data/plans/: aggregation_1_plan.txt  aggregation_2_plan.txt  aggregation_3_plan.txt  aggregation_4_plan.txt  aggregation_5_plan.txt  aggregation_6_plan.txt  derive_plan.txt  explode_plan.txt  filter_not_in_output_plan.txt  filter_plan.txt  join_2_broadcast_plan.txt  join_2_plan.txt  join_cross_broadcast_plan.txt  join_cross_plan.txt  join_inner_plan.txt  (+29 more)
ea/: __init__.py  column_dependency.py  explainanalyzed.py  explainanlyzed_v1.py  extract_execution_plan.py  lineage.py  test.mmd  util.py
sample_project/: builder.py  config.py  target_config.py  transformation.py  util.py
(+120 files in other folders)
