[project]
name = "explainalyzed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark>=4.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]


[tool.ruff]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D107"]
line-length = 129

[tool.ruff.per-file-ignores]
"tests/**/test_*.py" = ["S101"]
